fixed shift having to do with the menu-toggle

--- a/assets/styles.css
+++ b/assets/styles.css
@@ -22,7 +22,7 @@ body {
 main {
   width: 100%;
   max-width: 100vw;
-  min-height: 50vh;
+  min-height: 15vh;
   height: auto;
   box-sizing: border-box;
 }
@@ -244,14 +244,14 @@ nav ul li :hover {
 
 .logo-container {
   height: auto;
-  max-height: 5vh;
-  width: 35vw;
-  max-width: 45vw;
+  min-height: 2vh;
+  width: 15vw;
+  max-width: 15vw;
 }
 
 .logo-container img {
-  width: auto;
-  height: 100%;
+  width: 100%;
+  height: auto;
   object-fit: cover;
   aspect-ratio: 2.73;
 }
@@ -274,15 +274,15 @@ nav ul li :hover {
   justify-content: flex-end;
   margin-right: 2em;
   flex: 1;
-  height: 3.5vh;
+  height: auto;
   width: 22vw;
 }
 
 .search-container input {
   width: 22vw;
-  height: 3.5vh;
-  max-height: 100%;
-  max-width: 22vw;
+  height: auto;
+  max-height: auto;
+  max-width: 40vw;
   flex: 1;
   border-radius: 0.3125em;
   padding: 0.5em;
@@ -294,46 +294,15 @@ nav ul li :hover {
 }
 
 
-.menu-toggle {
-  cursor: pointer;
-  display: none;
-  align-items: center;
-  padding: 0.5em;
-  border-radius: 0.3125em;
-  background-color: transparent;
-  width: 8vh;
-  height: 8vh;
-  justify-content: flex-end;
-}
 
-.menu-toggle img {
-  max-width: 100%;
-  width: 100%;
-  height: auto;
-  object-fit: cover;
-  aspect-ratio: 1 / 1;
-}
-
-/* General Reset for Consistency */
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}
-
-/* Hero Section Styling */
 .hero-section {
   padding: 0;
   width: 100vw;
-  /* Ensure it takes the full viewport width */
   max-width: 100%;
-  /* Prevent any overflow restriction */
   height: auto;
   display: block;
   overflow: hidden;
-  /* Prevent unwanted scrolling */
 }
-
 
 .blog-hero-section {
   width: 100%;
@@ -341,15 +310,21 @@ nav ul li :hover {
   height: auto;
 }
 
+.hero-img {
+  width: 100%;
+  max-width: 100vw;
+  height: auto;
+  min-height: 5vh;
+}
+
 .hero-img img {
-  width: 100vw;
-  max-width: 100%;
+  width: 100%;
   height: auto;
   object-fit: cover;
   display: block;
   padding: 0;
   object-position: bottom center;
-  aspect-ratio: 2.74 / 1;
+  aspect-ratio: 2.80 / 1;
 }
 
 /* Grid Section (Welcome Section) */
@@ -406,7 +381,6 @@ nav ul li :hover {
 }
 
 .grid2-section2 img {
-  max-width: 100%;
   width: 100%;
   height: auto;
   object-fit: cover;
@@ -480,7 +454,8 @@ nav ul li :hover {
 .categories-box {
   display: flex;
   flex-direction: column;
-  max-width: 100%;
+  width: 100%;
+  max-width: 100vw;
   height: auto;
   text-align: left;
   margin: 0 auto;
@@ -494,7 +469,6 @@ nav ul li :hover {
 
 .feature-box img {
   width: 100%;
-  max-width: 100%;
   aspect-ratio: 5 / 4;
   height: auto;
   object-fit: cover;
@@ -506,7 +480,6 @@ nav ul li :hover {
 
 .categories-box img {
   width: 100%;
-  max-width: 100%;
   height: auto;
   aspect-ratio: 1.80 / 1;
   object-fit: cover;
@@ -1559,36 +1532,9 @@ button.btn5:hover {
 
   .hero-img img {
     width: 100%;
-    height: 100%;
+    height: auto;
     object-position: bottom;
     aspect-ratio: 1.71 / 1;
-  }
-
-  .menu-toggle {
-    cursor: pointer;
-    display: flex;
-    align-items: center;
-    padding: 0.5em;
-    border-radius: 0.3125em;
-    background-color: transparent;
-    width: 8vh;
-    height: 5.9vh;
-    justify-content: flex-end;
-  }
-
-  .menu-toggle img {
-    max-width: 100%;
-    width: 100%;
-    height: auto;
-    min-height: 5vh;
-    object-fit: cover;
-    aspect-ratio: 1 / 1;
-  }
-
-  .menu-toggle {
-    display: flex;
-    width: 8vw;
-    height: auto;
   }
 
   .nav-menu {
@@ -1620,6 +1566,27 @@ button.btn5:hover {
     animation: slideIn 0.5s ease-in-out;
   }
 
+  .nav-icon-container {
+    width: 100%;
+    max-width: 100vw;
+    height: auto;
+    min-height: 2vh;
+    justify-content: center;
+  }
+
+  .menu-toggle {
+    width: auto;
+    max-width: 10vw;
+    height: 6vh;
+    min-height: 1vh;
+  }
+
+  .menu-toggle img {
+    width: 100%;
+    height: auto;
+    aspect-ratio: 1 / 1;
+  }
+
   .categories-grid {
     min-width: 5vw;
   }
@@ -1640,7 +1607,6 @@ button.btn5:hover {
   }
 
   .grid2-section2 img {
-    max-width: 100%;
     width: 100%;
     height: auto;
     object-fit: cover;
@@ -1914,32 +1880,32 @@ button.btn5:hover {
   .nav-icon-container {
     display: flex;
     flex-direction: row;
-    width: 80vw;
-    max-width: 80vw;
+    width: 100%;
+    max-width: 100vw;
     height: auto;
-    min-height: 6vh;
+    min-height: 1vh;
     align-items: center;
     justify-content: center;
     flex: 1;
     padding: 0;
     margin: 0 auto;
+    gap: 1em;
   }
 
   .search-container {
     display: flex;
     align-items: center;
-    justify-content: flex-end;
     margin-right: 2em;
     flex: 1;
     height: auto;
-    width: 30vw;
+    min-height: 2vh;
+    width: 40vw;
+    max-width: 45vw;
   }
 
   .search-container input {
-    width: 22vw;
+    width: 100%;
     height: auto;
-    max-height: 100%;
-    max-width: 100%;
     flex: 1;
     border-radius: 0.3125em;
     padding: 0.3em;
@@ -1947,58 +1913,25 @@ button.btn5:hover {
   }
 
   .search-container input::placeholder {
-    font-size: 2.5vw;
-  }
-
-  .menu-toggle {
-    cursor: pointer;
-    display: none;
-    align-items: center;
-    padding: 0.5em;
-    border-radius: 0.3125em;
-    background-color: transparent;
-    width: auto;
-    height: 100%;
-    justify-content: flex-end;
-  }
-
-  .menu-toggle img {
-    max-width: 100%;
-    width: 100%;
-    height: auto;
-    object-fit: cover;
-    aspect-ratio: 1 / 1;
-  }
-
-  .menu-toggle {
-    cursor: pointer;
-    display: flex;
-    align-items: center;
-    padding: 0.5em;
-    border-radius: 0.3125em;
-    background-color: transparent;
-    width: 8vh;
-    height: 5.9vh;
-    justify-content: flex-end;
-  }
-
-  .menu-toggle img {
-    max-width: 100%;
-    width: 100%;
-    height: auto;
-    min-height: 3vh;
-    object-fit: cover;
-    aspect-ratio: 1 / 1;
-  }
-
-  .menu-toggle {
-    display: flex;
-    width: 8vw;
-    height: auto;
+    font-size: 3vw;
   }
 
   .nav-menu {
     display: none;
+  }
+
+  .logo-container {
+    height: auto;
+    min-height: 2vh;
+    width: 40vw;
+    max-width: 40vw;
+  }
+
+  .logo-container img {
+    width: 100%;
+    height: auto;
+    object-fit: cover;
+    aspect-ratio: 2.73;
   }
 
   .nav-menu.active {
@@ -2010,14 +1943,30 @@ button.btn5:hover {
     display: none;
   }
 
+  .menu-toggle {
+    width: auto;
+    max-width: 6vw;
+    height: 5vh;
+    min-height: 1vh;
+  }
+
+  .menu-toggle img {
+    width: 100%;
+    height: auto;
+    aspect-ratio: 1 / 1;
+  }
+
+
+
   .hero-img {
-    width: 100vw;
+    width: 100%;
     max-width: 100vw;
     height: auto;
+    min-height: 2vh;
   }
 
   .hero-img img {
-    width: 100vw;
+    width: 100%;
     height: auto;
     object-position: bottom;
     aspect-ratio: 5/4;
@@ -2296,8 +2245,8 @@ button.btn5:hover {
 
   .bottom-logo img {
     width: 100%;
-    max-width: 70vw;
     height: auto;
+    aspect-ratio: 2.72 / 1;
   }
 
   .input-text {
